# wopr-mcts-connect4

./: .gitignore  README.md  main.js  package-lock.json  package.json
client/: index.html  package-lock.json  style.css
client/src/routes/: _layout.svelte  index.svelte
client/static/: global.css
game-engine/: test-game-c4.js
game-runners/: neon-runner.js  node-ffi-runner.js  node-runner.js
neon-wopr/: README.md  package.json
neon-wopr/lib/: index.js  monte-carlo-node.js
neon-wopr/native/: Cargo.toml
neon-wopr/native/src/: helpers.rs  lib.rs
node-wopr/: game-c4.js  main.js  monte-carlo-node.js  monte-carlo.js  package-lock.json  package.json  play-c4.js  state-c4.js  test-game-c4.js
rust-wopr/: Cargo.toml
rust-wopr/src/: lib.rs
