[package]
name = "neon-wopr"
version = "0.1.0"
authors = ["John Behan <behanj@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_wopr"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "*"
neon-serde = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
